# sweep-logger

./: .gitignore  Dockerfile  create_sweep.py  execute-sweep.sh  main.py  pyproject.toml  setup.cfg
sweep_logger/: __init__.py  create_sweep.py  execute_sweep.py  logger.py  main.py  params.py  reproducibility_info.py  util.py
