[tool.poetry]
name = "sweep_logger"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
run-logger = {git = "https://github.com/ethanabrooks/run-logger.git", rev = "9220cab4c8431dc3306db566df481f38875d41b1"}
redis = "^3.5.3"
gql = "^2.0.0"
jsonlines = "^2.0.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create-sweep = 'sweep_logger.main:main'
