[tool.poetry]
name = "sweep_logger"
version = "0.1.0"
description = ""
authors = ["Ethan Brooks <ethanabrooks@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"
run-logger = {git = "https://github.com/ethanabrooks/run-logger.git", rev = "main"}
redis = "^3.5.3"
gql = "^2.0.0"
jsonlines = "^2.0.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
black = "^21.7b0"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
execute-sweep = 'sweep_logger.execute_sweep:main'
