[metadata]
name = sweep-logger
version = 0.0.1
author = Ethan Brooks
author_email = ethanabrooks@gmail.com
description = Interface for interacting with Hasura database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ethanabrooks/sweep-logger
project_urls =
    Bug Tracker = https://github.com/ethanabrooks/sweep-logger/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    PyYAML >=5.4.1
    run-logger ==git+https://github.com/ethanabrooks/run-logger.git@main
    redis >=3.5.3

[options.packages.find]
where = .
